data/issues_nolabel/nolabel_test_2122.txt
MacOS successful installed, fail to import

Environment info
Operating System:
OSX EI Capitan, 10.11.4
Installed version of CUDA and cuDNN:
(please attach the output of ls -l /path/to/cuda/lib/libcud*):
None
If installed from binary pip package, provide:

Which pip package you installed.
tensorflow-0.8.0-py2-none-any.whl for mac
The output from python -c "import tensorflow; print(tensorflow.version)".
➜  examples python -c "import tensorflow; print(tensorflow.version)".
File "", line 1
import tensorflow; print(tensorflow.version).
^
SyntaxError: invalid syntax

What have you tried?

pip uninstall, reinstall , however, still failed.

Logs or other output that would be helpful
(If logs are large, please upload as attachment).



import tensorflow as tf
Traceback (most recent call last):
File "", line 1, in 
File "/usr/local/lib/python2.7/site-packages/tensorflow/init.py", line 23, in 
from tensorflow.python import *
File "/usr/local/lib/python2.7/site-packages/tensorflow/python/init.py", line 49, in 
from tensorflow.core.framework.graph_pb2 import *
File "/usr/local/lib/python2.7/site-packages/tensorflow/core/framework/graph_pb2.py", line 16, in 
from tensorflow.core.framework import attr_value_pb2 as tensorflow_dot_core_dot_framework_dot_attr__value__pb2
File "/usr/local/lib/python2.7/site-packages/tensorflow/core/framework/attr_value_pb2.py", line 16, in 
from tensorflow.core.framework import tensor_pb2 as tensorflow_dot_core_dot_framework_dot_tensor__pb2
File "/usr/local/lib/python2.7/site-packages/tensorflow/core/framework/tensor_pb2.py", line 16, in 
from tensorflow.core.framework import tensor_shape_pb2 as tensorflow_dot_core_dot_framework_dot_tensor__shape__pb2
File "/usr/local/lib/python2.7/site-packages/tensorflow/core/framework/tensor_shape_pb2.py", line 22, in 
serialized_pb=_b('\n,tensorflow/core/framework/tensor_shape.proto\x12\ntensorflow"z\n\x10TensorShapeProto\x12-\n\x03\x64im\x18\x02 \x03(\x0b\x32 .tensorflow.TensorShapeProto.Dim\x12\x14\n\x0cunknown_rank\x18\x03 \x01(\x08\x1a!\n\x03\x44im\x12\x0c\n\x04size\x18\x01 \x01(\x03\x12\x0c\n\x04name\x18\x02 \x01(\tB/\n\x18org.tensorflow.frameworkB\x11TensorShapeProtosP\x01\x62\x06proto3')
TypeError: init() got an unexpected keyword argument 'syntax'